# ctrlb-decompose

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/workflows/: wasm-deploy.yml
benches/: pipeline.rs
extension/: Makefile  manifest.json
extension/background/: sw.js
extension/panel/: panel.html  panel.js
extension/webstore/: description.md  privacy.md  reviewer-notes.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/analyze-logs/: SKILL.md
src/: anomaly.rs  correlation.rs  label.rs  lib.rs  main.rs  scoring.rs  stats.rs  timestamp.rs  types.rs  wasm.rs
src/format/: human.rs  json.rs  llm.rs  mod.rs
tests/: integration.rs
